Test/git-issues/git-issue-2550.dfy
// RUN: %exits-with 2 %resolve "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

type Foo

module bar {
  class C {
    var baz : Foo
  }
}
